--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$ I am currently a research scientist at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I am currently a research scientist at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. 
 We are presently working on employing intelligent software encompassing distributed scheduling, machine learning, hardware-software modeling, etc.to reshape the future of data center efficiency. 
 Previously, I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
@@ -153,11 +153,11 @@ and 4) geo-distributed data processing, etc.
 I has published more than 35 peer-reviewed papers in the field of distributed systems, cloud computing and big data analytics. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China  in June 2011 and January 2017 respectively.  I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China  in June 2011 and January 2017 respectively.  I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Play distributed systems to improve the efficiency and reliability for adapting to ever-changing environments: resource management, resource scheduling, fault tolerance, dependability etc. </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Play with data: system profiling, log analysis and applied machine learning </span></p>
 
@@ -185,7 +185,7 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
-~$ Highlight: TPDS(2), TKDE(1), TSC(2), VLDB(1), ICDCS(1), DSN(1), LISA(1), SoCC(1), etc. </span></p>
+Highlight: TPDS(2), TKDE(1), TSC(2), VLDB(1), ICDCS(1), DSN(1), LISA(1), SoCC(1), CSUR(1), etc. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
@@ -217,10 +217,12 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 </span></p> 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Projects </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Research Grants </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
-~$ I have the opportunity to work closely with many institutes around the world and participate in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
+I have the opportunity to work closely with many institutes around the world and participate in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> grants -l </strong> </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 program), Member, 2018.6 - present </span></p>
 
@@ -237,17 +239,17 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Nature Science Foundation of China (91118008, 90818028, 6117029 4)</span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advising in MSDS Research Team </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; MSDS Research Team </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
-~$ I have been supervising and working closely with many students mainly from COLAB. The programmes primarily include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
+I have been supervising and working closely with many students mainly from COLAB. The programmes primarily include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Current </strong> </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.), Xiaoyang Sun (2019.9- , Uni of Leeds), Jaber Almutairi (2018.6-, Uni of Leeds), Xiaochen Sun (2019.9- , Uni of Leeds., Visiting Student from ISCAS) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l current </strong> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.),<a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds), Jaber Almutairi (2018.6-, Uni of Leeds), Xiaochen Sun (2019.9- , Uni of Leeds., Visiting Student from ISCAS) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  MSc. students: Shiqing Xue (2018.9-, Beihang Uni.) </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Alumni </strong> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l alumni </strong> </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Qi Shen (2017.9-2019.8, Postdoc researchers) 
 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (M.Sc of COMP5200M, 2019.4-2019.9, Uni. of Leeds) </span></p>
@@ -256,18 +258,25 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Lian Du (M.Sc, 2015.9-2018.3, first employment at Alibaba Group) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xixu Wang (M.Sc, 2014.9-2017.3, first employment at Baidu Inc.) </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Michael Hao Tong (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  <a href="https://people.cs.uchicago.edu/~michaelht/">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Yuda Wang (M.Sc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
+I have been collaborating closely with many brilliant researchers around the world. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l collaborator </strong> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Ismael Solis Moreno (now at IBM Research), Dr. Peter Garraghan (now Lecturer at Lancaster University),
+Dr. Zhenyu Wen (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assistant professor at NUDT) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Tao Lin (EPFL), Dr. Lei Cui (now senior researcher at CAS), Dr. Hao Peng (now assistant professor at Beihang University), Jin Ouyang (Alibaba Group), etc. </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Teaching </span></p>
  
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Cloud Computing (CS61839, Graduate Level Course, Beihang University), Spring 2017 (Together with Prof. Chunming Hu et. al)</span></p> 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some talks including the technical reports in the industrial meetings or academic presentations I gave could be found here: <a href="presentations.html">talks</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some talks including the technical reports in the industrial meetings or academic presentations I gave could be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Services </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Some of my recent services could be found here: <a href="services.html">services</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some of my recent services could be found here: <a href="services.html">~$ services</a> </span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
@@ -290,7 +299,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Dec. 2019 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Jan. 2020 </span></p>
 
 </body>
 </html>
