--- a/publications_topics.html
+++ b/publications_topics.html
@@ -141,10 +141,10 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/tpds2019-gapar-full.pdf">[full version]</a> <a href="paper/tpds2019-gapar.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016.pdf">[paper]</a> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing (TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   &bull; P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   &bull; P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; X.Ouyang, P.Garraghan, R.Yang, P.Townend, and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
@@ -153,12 +153,13 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya,R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf">[paper]</a>
 </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; L.Cui, J.Li, T.Wo, B.Li, R.Yang, Y.Cao, J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf">[paper]</a>
+</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang, T.Wo, C.Hu, J.Xu and M.Zhang. D2PS : a Dependable Data Provisioning Service in Multi-tenants Cloud Environment. in the 17th IEEE HASE 2016 <a href="paper/hase2016.pdf">[paper]</a>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; X.Ouyang, C.Wang, R.Yang, P.Towend, J.Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf">[paper]</a>
 </span></p>
-
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, J.Ouyang, C.Hu. Fail at Scale. Communications of CCF, 2016 (In Chinese) <a href="paper/ccfcomm2016.pdf">[paper]</a>
 </span></p>
@@ -200,11 +201,8 @@ A Method for Private Car Transportation Dispatching Based on a Passenger Demand 
 </span></p>
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Virtualized Execution Environment  </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Early Work on Virtualized Execution Environment </span></p>
 
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; L.Cui, J.Li, T.Wo, B.Li, R.Yang, Y.Cao, J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf">[paper]</a>
-</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Liu, R.Yang*, J.Sun, X.Liu.
 SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in the 13th IEEE SOSE, 2019 
@@ -219,7 +217,6 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; B.Zhang, J.Kang, T.Wo, Y.Wang, R.Yang. a Flexible and Scalable Affinity Lock for the Kernel, in the 16th IEEE HPCC 2014, <a href="paper/hpcc2014.pdf">[paper]</a> 
 </span></p>
-
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; I.Moreno, R.Yang, J.Xu, T.Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013 (Best Paper Award) <a href="paper/isads2013.pdf">[paper]</a>
 </span></p>
@@ -237,6 +234,6 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by Dec. 2019 </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by Jan. 2020 </span> &nbsp; &nbsp;</p>
 </body>
 </html>
