--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@ I have the opportunity to work closely with many institutes around the world and
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 program), Member, 2018.6 - present </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Server Modelling Capability (No.45904), supported by Innovate UK Programme, UKRI, Key Member, 2020.2 - 2020.9 </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 Programme), Member, 2018.6 - 2019.12 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator, 2016.6 - 2018.5 </span></p>
 
@@ -266,17 +268,17 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l collaborator </strong> </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Ismael Solis Moreno (now at IBM Research), Dr. Peter Garraghan (now Lecturer at Lancaster University),
 Dr. Zhenyu Wen (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assistant professor at NUDT) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Tao Lin (EPFL), Dr. Lei Cui (now senior researcher at CAS), Dr. Hao Peng (now assistant professor at Beihang University), Jin Ouyang (Alibaba Group), etc. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Tao Lin (EPFL), Dr. Lei Cui (now associate professor at CAS), Dr. Hao Peng (now assistant professor at Beihang University), Jin Ouyang (senior staff engineer at Alibaba Group), etc. </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Teaching </span></p>
  
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Cloud Computing (CS61839, Graduate Level Course, Beihang University), Spring 2017 (Together with Prof. Chunming Hu et. al)</span></p> 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some talks including the technical reports in the industrial meetings or academic presentations I gave could be found here: <a href="presentations.html">~$ talks</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Services </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some of my recent services could be found here: <a href="services.html">~$ services</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some of my recent professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
