--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
 	{font-size:24px}
 .incline
 	{font-style:italic;
-	 font-size:12.5pt;
+	 font-size:12pt;
 	 font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
@@ -41,12 +41,12 @@
 	{text-align:center}
 .style10
 	{text-align:left;
-	font-size:16pt;
+	font-size:14pt;
 	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 "}
 .style11
 	{text-align:left;
-	font-size:12pt;
+	font-size:11pt;
 	font-family:Arial,"\6977 \4F53 "}
 .style12
 	{text-align:justify;
@@ -87,16 +87,16 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2020</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, 
-IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020, to appear
+IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 
 <a href="paper/tpds2020-rose.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020, to appear 
-<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
+<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a><a href="paper/csur2020.pdf">[paper]</a> </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
 <a href="https://scholar.google.com/scholar?oi=bibs&cluster=10135161801314640093&btnI=1&hl=en"> [googlebook]</a> 
-<a href="">[preprint]</a>
+<a href="paper/bookchapter2018-fogorch.pdf">[preprint]</a>
  </span></p>
 
 
@@ -146,6 +146,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
+
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2017 </span></p>
 
