--- a/publications_topics.html
+++ b/publications_topics.html
@@ -41,12 +41,12 @@
 	{text-align:center}
 .style10
 	{text-align:left;
-	font-size:16pt;
+	font-size:14pt;
 	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 "}
 .style11
 	{text-align:left; 
-	font-size:12pt;
+	font-size:11pt;
 	font-family:Arial,"\6977 \4F53 "}
 .style12
 	{text-align:justify;
@@ -169,9 +169,10 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Systems for Big Data and ML Applications </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR) 2020 
-<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> 
-</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
+<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a><a href="paper/csur2020.pdf">[paper]</a> </span></p>
+
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>
 </span></p> 
